Proyecto1OLC2/target/generated-sources/antlr4/com/mycompany/zetariano/ZetarianoParser.java
// Generated from com/mycompany/zetariano/Zetariano.g4 by ANTLR 4.13.2
package com.mycompany.zetariano;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ZetarianoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, PUBLIC=11, CLASS=12, STRING=13, INT=14, VOID=15, RETURN=16, BOOLEAN=17, 
		IF=18, NULL=19, DOUBLE=20, CHAR=21, TRUE=22, FALSE=23, NEW=24, ELSE=25, 
		SWITCH=26, CASE=27, DEFAULT=28, BREAK=29, FOR=30, CONTINUE=31, WHILE=32, 
		DO=33, PRINTLN=34, PRINT=35, READLN=36, ASIGNACION=37, ASIGNACION_SUMA=38, 
		ASIGNACION_RESTA=39, ASIGNACION_MULT=40, SUMA=41, RESTA=42, MULTIPLICACION=43, 
		DIVISION=44, MODULO=45, IGUALDAD=46, DESIGUALDAD=47, MENOR_QUE=48, MAYOR_QUE=49, 
		MAYOR_IGUAL_QUE=50, MENOR_IGUAL_QUE=51, NEGACION=52, TERNARIO=53, AND=54, 
		OR=55, INCREMENTO=56, DECREMENTO=57, ID=58, DECIMAL=59, ENTERO=60, CARACTER=61, 
		CADENA=62, ESPACIO=63, COMENTARIO_LINEA=64, COMENTARIO_MULTILINEA=65;
	public static final int
		RULE_programa = 0, RULE_defClase = 1, RULE_instruccionesClase = 2, RULE_crearVariable = 3, 
		RULE_declararVariable = 4, RULE_variable = 5, RULE_arreglo = 6, RULE_dimensionArreglo = 7, 
		RULE_objeto = 8, RULE_asignarVariable = 9, RULE_asignarVariablePrimitiva = 10, 
		RULE_asignarVariableArreglo = 11, RULE_asignarVaribaleObjeto = 12, RULE_idAsignacion = 13, 
		RULE_valorArreglo = 14, RULE_instanciaArreglo = 15, RULE_tamanioArreglo = 16, 
		RULE_asignacionPosicionArreglo = 17, RULE_tipoIncremento = 18, RULE_declAsignVariable = 19, 
		RULE_declAsignPrimitivo = 20, RULE_declAsignArreglo = 21, RULE_declAsignObjeto = 22, 
		RULE_instanciarObjeto = 23, RULE_argumento = 24, RULE_expresion = 25, 
		RULE_exprLogica = 26, RULE_exprRelacional = 27, RULE_exprAritmetica = 28, 
		RULE_termino = 29, RULE_factor = 30, RULE_valor = 31, RULE_valorPrimitivo = 32, 
		RULE_valorPosicionArreglo = 33, RULE_valorObjeto = 34, RULE_tipoDato = 35, 
		RULE_tipoPrimitivo = 36, RULE_tipoObjeto = 37, RULE_valorDatoObjeto = 38, 
		RULE_accesoDatoObjeto = 39, RULE_accesoMetodo = 40, RULE_valorTernario = 41, 
		RULE_condicional = 42, RULE_datoTernario = 43, RULE_constructor = 44, 
		RULE_parametro = 45, RULE_instrucciones = 46, RULE_sentencia = 47, RULE_sentenciaFuncionEspecial = 48, 
		RULE_imprimirConSaltoLinea = 49, RULE_imprimiSinSaltoLinea = 50, RULE_leerEntrada = 51, 
		RULE_funcion = 52, RULE_sentenciaInstruccion = 53, RULE_sentenciaIf = 54, 
		RULE_condicionalIf = 55, RULE_condicionalElseIf = 56, RULE_condicionalElse = 57, 
		RULE_sentenciaSwitch = 58, RULE_instruccionesSwitch = 59, RULE_caso = 60, 
		RULE_default = 61, RULE_sentenciaCiclo = 62, RULE_cicloFor = 63, RULE_condicionalFor = 64, 
		RULE_seccionInstrucciones = 65, RULE_sentenciaInterrupcion = 66, RULE_cicloWhile = 67, 
		RULE_condicionalWhile = 68, RULE_cicloDoWhile = 69, RULE_instruccionesDoWhile = 70, 
		RULE_funcionSinRetorno = 71, RULE_funcionConRetorno = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "defClase", "instruccionesClase", "crearVariable", "declararVariable", 
			"variable", "arreglo", "dimensionArreglo", "objeto", "asignarVariable", 
			"asignarVariablePrimitiva", "asignarVariableArreglo", "asignarVaribaleObjeto", 
			"idAsignacion", "valorArreglo", "instanciaArreglo", "tamanioArreglo", 
			"asignacionPosicionArreglo", "tipoIncremento", "declAsignVariable", "declAsignPrimitivo", 
			"declAsignArreglo", "declAsignObjeto", "instanciarObjeto", "argumento", 
			"expresion", "exprLogica", "exprRelacional", "exprAritmetica", "termino", 
			"factor", "valor", "valorPrimitivo", "valorPosicionArreglo", "valorObjeto", 
			"tipoDato", "tipoPrimitivo", "tipoObjeto", "valorDatoObjeto", "accesoDatoObjeto", 
			"accesoMetodo", "valorTernario", "condicional", "datoTernario", "constructor", 
			"parametro", "instrucciones", "sentencia", "sentenciaFuncionEspecial", 
			"imprimirConSaltoLinea", "imprimiSinSaltoLinea", "leerEntrada", "funcion", 
			"sentenciaInstruccion", "sentenciaIf", "condicionalIf", "condicionalElseIf", 
			"condicionalElse", "sentenciaSwitch", "instruccionesSwitch", "caso", 
			"default", "sentenciaCiclo", "cicloFor", "condicionalFor", "seccionInstrucciones", 
			"sentenciaInterrupcion", "cicloWhile", "condicionalWhile", "cicloDoWhile", 
			"instruccionesDoWhile", "funcionSinRetorno", "funcionConRetorno"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "';'", "'['", "']'", "','", "'('", "')'", "'.'", 
			"':'", "'public'", "'class'", "'String'", "'int'", "'void'", "'return'", 
			"'boolean'", "'if'", "'null'", "'double'", "'char'", "'true'", "'false'", 
			"'new'", "'else'", "'switch'", "'case'", "'default'", "'break'", "'for'", 
			"'continue'", "'while'", "'do'", "'println'", "'print'", "'readln'", 
			"'='", "'+='", "'-='", "'*='", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
			"'!='", "'<'", "'>'", "'>='", "'<='", "'!'", "'?'", "'&&'", "'||'", "'++'", 
			"'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "PUBLIC", 
			"CLASS", "STRING", "INT", "VOID", "RETURN", "BOOLEAN", "IF", "NULL", 
			"DOUBLE", "CHAR", "TRUE", "FALSE", "NEW", "ELSE", "SWITCH", "CASE", "DEFAULT", 
			"BREAK", "FOR", "CONTINUE", "WHILE", "DO", "PRINTLN", "PRINT", "READLN", 
			"ASIGNACION", "ASIGNACION_SUMA", "ASIGNACION_RESTA", "ASIGNACION_MULT", 
			"SUMA", "RESTA", "MULTIPLICACION", "DIVISION", "MODULO", "IGUALDAD", 
			"DESIGUALDAD", "MENOR_QUE", "MAYOR_QUE", "MAYOR_IGUAL_QUE", "MENOR_IGUAL_QUE", 
			"NEGACION", "TERNARIO", "AND", "OR", "INCREMENTO", "DECREMENTO", "ID", 
			"DECIMAL", "ENTERO", "CARACTER", "CADENA", "ESPACIO", "COMENTARIO_LINEA", 
			"COMENTARIO_MULTILINEA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Zetariano.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ZetarianoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public DefClaseContext defClase() {
			return getRuleContext(DefClaseContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			defClase();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefClaseContext extends ParserRuleContext {
		public TerminalNode PUBLIC() { return getToken(ZetarianoParser.PUBLIC, 0); }
		public TerminalNode CLASS() { return getToken(ZetarianoParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(ZetarianoParser.ID, 0); }
		public InstruccionesClaseContext instruccionesClase() {
			return getRuleContext(InstruccionesClaseContext.class,0);
		}
		public DefClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defClase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDefClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDefClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDefClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefClaseContext defClase() throws RecognitionException {
		DefClaseContext _localctx = new DefClaseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_defClase);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(PUBLIC);
			setState(149);
			match(CLASS);
			setState(150);
			match(ID);
			setState(151);
			match(T__0);
			setState(152);
			instruccionesClase();
			setState(153);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesClaseContext extends ParserRuleContext {
		public List<CrearVariableContext> crearVariable() {
			return getRuleContexts(CrearVariableContext.class);
		}
		public CrearVariableContext crearVariable(int i) {
			return getRuleContext(CrearVariableContext.class,i);
		}
		public List<ConstructorContext> constructor() {
			return getRuleContexts(ConstructorContext.class);
		}
		public ConstructorContext constructor(int i) {
			return getRuleContext(ConstructorContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public InstruccionesClaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccionesClase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterInstruccionesClase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitInstruccionesClase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitInstruccionesClase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesClaseContext instruccionesClase() throws RecognitionException {
		InstruccionesClaseContext _localctx = new InstruccionesClaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccionesClase);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376155013120L) != 0)) {
				{
				{
				setState(155);
				crearVariable();
				}
				}
				setState(160);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(164);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(161);
					constructor();
					}
					} 
				}
				setState(166);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUBLIC) {
				{
				{
				setState(167);
				funcion();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CrearVariableContext extends ParserRuleContext {
		public DeclararVariableContext declararVariable() {
			return getRuleContext(DeclararVariableContext.class,0);
		}
		public AsignarVariableContext asignarVariable() {
			return getRuleContext(AsignarVariableContext.class,0);
		}
		public DeclAsignVariableContext declAsignVariable() {
			return getRuleContext(DeclAsignVariableContext.class,0);
		}
		public CrearVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_crearVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterCrearVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitCrearVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitCrearVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CrearVariableContext crearVariable() throws RecognitionException {
		CrearVariableContext _localctx = new CrearVariableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_crearVariable);
		try {
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(173);
				declararVariable();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				asignarVariable();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(175);
				declAsignVariable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclararVariableContext extends ParserRuleContext {
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ArregloContext arreglo() {
			return getRuleContext(ArregloContext.class,0);
		}
		public ObjetoContext objeto() {
			return getRuleContext(ObjetoContext.class,0);
		}
		public DeclararVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declararVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDeclararVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDeclararVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDeclararVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclararVariableContext declararVariable() throws RecognitionException {
		DeclararVariableContext _localctx = new DeclararVariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declararVariable);
		try {
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(178);
				variable();
				setState(179);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				arreglo();
				setState(182);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(184);
				objeto();
				setState(185);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableContext extends ParserRuleContext {
		public TipoDatoContext tipoDato() {
			return getRuleContext(TipoDatoContext.class,0);
		}
		public TerminalNode ID() { return getToken(ZetarianoParser.ID, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			tipoDato();
			setState(190);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArregloContext extends ParserRuleContext {
		public TipoDatoContext tipoDato() {
			return getRuleContext(TipoDatoContext.class,0);
		}
		public TerminalNode ID() { return getToken(ZetarianoParser.ID, 0); }
		public List<DimensionArregloContext> dimensionArreglo() {
			return getRuleContexts(DimensionArregloContext.class);
		}
		public DimensionArregloContext dimensionArreglo(int i) {
			return getRuleContext(DimensionArregloContext.class,i);
		}
		public ArregloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arreglo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterArreglo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitArreglo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitArreglo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArregloContext arreglo() throws RecognitionException {
		ArregloContext _localctx = new ArregloContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_arreglo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			tipoDato();
			setState(194); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(193);
				dimensionArreglo();
				}
				}
				setState(196); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__3 );
			setState(198);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DimensionArregloContext extends ParserRuleContext {
		public DimensionArregloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimensionArreglo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).enterDimensionArreglo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ZetarianoListener ) ((ZetarianoListener)listener).exitDimensionArreglo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ZetarianoVisitor ) return ((ZetarianoVisitor<? extends T>)visitor).visitDimensionArreglo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DimensionArregloContext dimensionArreglo() throws RecognitionException {
		DimensionArregloContext _localctx = new DimensionArregloContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_dimensionArreglo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			match(T__3);
			setState(201);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
